tests/lean/653.lean.expected.out
653.lean:4:14-4:32: error: Function expected at
  { }
but this term has type
  Color ?m ?m ?m

Note: Expected a function because this term is being applied to the argument
  255
